# blop-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  run_tests.py
.cursor/: mcp.json.example
.github/: dependabot.yml
.github/workflows/: package-verify.yml
contracts/mcp/: capture_artifact_result.schema.json  journey_list.schema.json  perform_step_result.schema.json  perform_step_spec.schema.json  prd_summary.schema.json  release_and_journeys.schema.json  release_context.schema.json  run_observation_result.schema.json  tool_error.schema.json  tool_response_generic.schema.json  ux_taxonomy.schema.json  workspace_context.schema.json
deploy/: prod.env.template
deploy/docker/: Dockerfile  docker-compose.sse.yml
deploy/systemd/: blop-http.service
docs/: AGENT_CONTEXT_PACK.md  CUSTOMER_ONBOARDING.md  DATA_HANDLING.md  DOC_CONTRACT.md  MCP_CLOUD_CONTRACT.md  MCP_CORE_WORKFLOW.md  SUPPORT_RUNBOOK.md  VERSIONING.md  capability_placement_open_core.md  compatibility_policy.md  mcp_performance.md  mobile_setup.md  operator_failures.md  oss_core_competitive_analysis.md  process_event_log.md  production_setup.md  quickstart_claude_code.md  quickstart_codex.md  quickstart_cursor.md  release_notes_template.md  releasing.md
docs/superpowers/plans/: 2026-03-31-pipeline-engine.md  2026-04-02-p2-mcp-ergonomics.md
docs/superpowers/specs/: 2026-03-31-pipeline-engine-design.md  2026-04-02-p2-mcp-ergonomics-design.md
scripts/: _demoblaze_bench_lib.py  benchmark_mcp_demoblaze.py  customer_onboarding_bench.py  deeper_release_check.py  eval_orchestration_smoke.py  export_mcp_schemas.py  mcp_stdio_e2e_demoblaze.py  production_mcp_smoke.py  setup_mobile_test_env.sh  smoke_local.sh  smoke_test_mcp_cloud_loop.py  test_pipeline_live.py
src/blop/: __init__.py  __main__.py  capabilities.py  config.py  devtools.py  prompts.py  schemas.py  server.py  server_http.py  stability.py
src/blop/api/: __init__.py  problem_handlers.py
src/blop/api/v1/: __init__.py  deps.py  rate_limit.py  router.py  schemas.py
src/blop/engine/: api_verification.py  auth.py  auth_prompt.py  browser.py  browser_pool.py  browser_runtime.py  browser_session_manager.py  circuit_breaker.py  classifier.py  codegen.py  context_graph.py  defect_classifier.py  discovery.py  dom_context.py  dom_utils.py  errors.py  events.py  evidence_policy.py  flow_builder.py  interaction.py  llm_events.py  llm_exceptions.py  llm_factory.py  llm_tracing.py  logger.py  metrics.py  page_state.py  path_safety.py  performance.py  pipeline.py  planner.py  qa_context.py  recommendations.py  recording.py  regression.py  secrets.py  security.py  semantic_query.py  smoke.py  snapshot_refs.py  (+3 more)
src/blop/engine/mobile/: __init__.py  appium_selector.py  classifier.py  driver.py  evidence.py  interaction.py  recording.py  regression.py
src/blop/engine/stages/: auth.py  classify.py  execute.py  report.py  validate.py
src/blop/mcp/: __init__.py  dto.py  envelope.py
src/blop/reporting/: artifacts.py  export.py  health_event_taxonomy.py  otel_export.py  process_event_log.py  results.py
src/blop/storage/: files.py  sqlite.py
src/blop/sync/: client.py  models.py
src/blop/tools/: __init__.py  assertions.py  atomic_browser.py  auth.py  baselines.py  browser_compat.py  capture_auth.py  compat.py  context_read.py  debug.py  discover.py  evaluate.py  journeys.py  network.py  process_insights.py  prompts.py  qa_advisor.py  record.py  regression.py  release_check.py  resources.py  results.py  security.py  storage.py  triage.py  v2_surface.py  validate.py
tests/: conftest.py  test_api_verification.py  test_auth.py  test_baselines.py  test_browser_compat_session.py  test_bugeater_integration.py  test_business_criticality.py  test_cancel_run.py  test_canonical_tools_unit.py  test_capabilities_profiles.py  test_capture_auth.py  test_circuit_breaker.py  test_classifier_v2.py  test_codegen_escaping.py  test_config_runtime.py  test_config_sync.py  test_consolidation_api.py  test_context_graph.py  test_context_graph_consumers.py  test_debug.py  test_discovery.py  test_envelope_schema.py  test_errors.py  test_evaluate.py  test_export_report.py  test_happy_path_integration.py  test_health_event_taxonomy.py  test_health_events.py  test_http_server.py  test_invalid_inputs.py  test_list_tools.py  test_llm_events.py  test_llm_exceptions.py  test_llm_factory.py  test_llm_tracing.py  test_mcp_contract_harness.py  test_metrics_active_runs.py  test_mobile_classifier.py  test_mobile_schema.py  test_mobile_selector.py  (+45 more)
tests/eval_harness/: test_browsergym_style_task.py  test_orchestration_smoke.py
tests/integration/: conftest.py  test_mobile_dvia_ios.py  test_mobile_sauce_android.py
tests/performance/: test_hotpaths_smoke.py  test_mcp_demoblaze_bench.py  test_mcp_stdio_e2e.py
tests/unit/: test_sync_client.py
