[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blop-mcp"
version = "0.3.0"
description = "MCP-native release confidence control plane for web apps"
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
keywords = ["mcp", "browser automation", "release confidence", "qa", "playwright"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Internet :: WWW/HTTP :: Browsers",
]

dependencies = [
  "mcp[cli]>=1.0.0",
  "browser-use",
  "playwright",
  "langchain_google_genai",
  "langchain_core",
  "pydantic>=2.0",
  "screeninfo",
  "aiosqlite>=0.19.0",
  "python-dotenv>=1.0.0",
  "Pillow>=10.0.0",
]

[project.urls]
Repository = "https://github.com/n2400813g/blop-mcp"
Homepage = "https://github.com/n2400813g/blop-mcp"
Documentation = "https://github.com/n2400813g/blop-mcp/blob/main/README.md"
"Issue Tracker" = "https://github.com/n2400813g/blop-mcp/issues"

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "pytest>=7.0",
  "pytest-asyncio>=0.21",
  "twine>=5.1.1",
]
anthropic = [
  "langchain_anthropic>=0.3.0",
]
openai = [
  "langchain_openai>=0.3.0",
]
server = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sse-starlette>=2.0.0",
]
mobile = [
  "Appium-Python-Client>=4.0.0",
]
mobile-proxy = [
  "Appium-Python-Client>=4.0.0",
  "mitmproxy>=10.0.0",
]
all = [
  "langchain_anthropic>=0.3.0",
  "langchain_openai>=0.3.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sse-starlette>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["blop*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "happy_path: end-to-end release confidence workflow tests",
  "slow: slower browser or network-backed tests",
  "integration: tests that require external services or a real browser runtime",
  "mobile: tests that require Appium server + iOS simulator or Android emulator",
]

[project.scripts]
blop = "blop.server:run"
blop-mcp = "blop.server:run"
blop-http = "blop.server_http:run"
blop-inspect = "blop.devtools:launch_inspector"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
