[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blop-mcp"
version = "0.4.0"
description = "MCP-native release confidence control plane for web apps"
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
keywords = ["mcp", "browser automation", "release confidence", "qa", "playwright"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Internet :: WWW/HTTP :: Browsers",
]

dependencies = [
  "mcp[cli]>=1.0.0",
  "browser-use",
  "playwright",
  "langchain_google_genai",
  "langchain_core",
  "pydantic>=2.0",
  "screeninfo",
  "aiosqlite>=0.19.0",
  "python-dotenv>=1.0.0",
  "Pillow>=10.0.0",
]

[project.urls]
Repository = "https://github.com/n2400813g/blop-mcp"
Homepage = "https://github.com/n2400813g/blop-mcp"
Documentation = "https://github.com/n2400813g/blop-mcp/blob/main/README.md"
"Issue Tracker" = "https://github.com/n2400813g/blop-mcp/issues"

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "pre-commit>=4.0",
  "pytest>=7.0",
  "pytest-asyncio>=0.21",
  "ruff>=0.9",
  "twine>=5.1.1",
]
anthropic = [
  "langchain_anthropic>=0.3.0",
]
openai = [
  "langchain_openai>=0.3.0",
]
server = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sse-starlette>=2.0.0",
  "slowapi>=0.1.9",
  "prometheus-client>=0.20.0",
]
mobile = [
  "Appium-Python-Client>=4.0.0",
]
mobile-proxy = [
  "Appium-Python-Client>=4.0.0",
  "mitmproxy>=10.0.0",
]
insights = [
  "pm4py>=2.7.0",
  "pandas>=2.0.0",
]
otel = [
  "opentelemetry-api>=1.20.0",
  "opentelemetry-sdk>=1.20.0",
]
all = [
  "langchain_anthropic>=0.3.0",
  "langchain_openai>=0.3.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sse-starlette>=2.0.0",
  "slowapi>=0.1.9",
  "prometheus-client>=0.20.0",
  "Appium-Python-Client>=4.0.0",
  "pm4py>=2.7.0",
  "pandas>=2.0.0",
  "opentelemetry-api>=1.20.0",
  "opentelemetry-sdk>=1.20.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["blop*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Opt-in real Appium/device tests: pytest tests/ -m mobile …
# (Cloud BLOP_MOBILE_PROVIDER still needs a matching vendor device pool.)
addopts = ["-m", "not mobile and not eval_harness"]
markers = [
  "happy_path: end-to-end release confidence workflow tests",
  "slow: slower browser or network-backed tests",
  "integration: tests that require external services or a real browser runtime",
  "network: tests that touch the public internet",
  "mobile: tests that require Appium server + iOS simulator or Android emulator",
  "eval_harness: offline orchestration smoke (opt-in: pytest -m eval_harness)",
]

[project.scripts]
blop = "blop.server:run"
blop-mcp = "blop.server:run"
blop-http = "blop.server_http:run"
blop-inspect = "blop.devtools:launch_inspector"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

# Deferred imports after env/bootstrap (logging suppression, test env).
[tool.ruff.lint.per-file-ignores]
"src/blop/server.py" = ["E402"]
"src/blop/engine/regression.py" = ["E402"]
"src/blop/engine/discovery.py" = ["E402"]
"tests/integration/test_mobile_dvia_ios.py" = ["E402"]
"tests/integration/test_mobile_sauce_android.py" = ["E402"]
"tests/test_mobile_selector.py" = ["E402"]
"tests/test_sqlite_integration.py" = ["E402"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
